ui fix : Improved sidebar #142 + small flicker while configure charts
(tables and dimensions vs. measures) will not show any background: on hover

and all the items in it which are selectable are toggle with pointer cursor

--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -5,9 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/*sidebar-menus*/
+.bp3-tree-node-content-0:hover,
+.bp3-tree-node-content-1:hover{
+  background: none;
+}
+
+.bp3-tree-node-content-2{
+ cursor: pointer;
 }
